# src/app/Swagger/swagger.json
@@ -1,4 +1,5 @@
 
+
 {
   "openapi": "3.0.1",
   "info": {
@@ -2078,6 +2079,40 @@
                 "schema": {
                   "type": "integer",
                   "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/match/equipe/{id}": {
+      "get": {
+        "tags": [
+          "match-controller"
+        ],
+        "operationId": "findByEquipeId",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MatchDTO"
+                  }
                 }
               }
             }
